# Robocup-2025

./: .gitignore  README.md  components.md
CAD/: README.md
Code/: README.md
Code/Esp32/: main.cpp
Code/camera/: README.md  another.py  main.py
Cone Design/: CMakeLists.txt  README.md  main.cpp  with_gui.cpp
Cone Design/.cache/clangd/index/: with_gui.cpp.46072BA0E04D5DA5.idx  without_imgui.cpp.FD6A5B45326748F7.idx
PCB/: README.md
PCB/files/: robocup-top-pos.csv  robocup.kicad_pcb  robocup.kicad_prl  robocup.kicad_pro  robocup.kicad_sch
